--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^2.2.4",
     "materialize-css": "^0.100.2",
+    "ng2-search-filter": "^0.4.7",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
